cmake_minimum_required(VERSION 3.5)
project(MatioProj)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED true)

set(MATIO_INCLUDE_DIRS /usr/include)
set(MATIO_LIBRARIES /usr/lib/x86_64-linux-gnu/libmatio.so)
include_directories(${MATIO_INCLUDE_DIRS})
set(INCLUDE_DIR ./include)
aux_source_directory(./src SRC)
add_executable(MatioProj ${SRC})
target_include_directories(MatioProj PUBLIC ${INCLUDE_DIR})
# target_link_directories(MatioProj PUBLIC ${MATIO_INCLUDE_DIR} ${INCLUDE_DIR})
target_link_libraries(MatioProj ${MATIO_LIBRARIES})
